Documenti revisionati per PB Aggiornati alla versione 2.0.0 o 1.0.0 per la PB

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -32,6 +32,8 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{1.0.0}{27/07/2023}{Soldà Matteo}{Brotto Romina}{Approvazione documento per RTB}
 \addversione{1.0.1}{27/07/2023}{Brotto Romina}{Alberti Nicolas }{Aggiunta sprint e sezioni 2.2 e 2.3}
 \addversione{1.0.2}{20/09/2023}{Salami Lorenzo}{Cavaliere Erica }{Completato piano di progetto}
+\addversione{1.1.0}{26/09/2023}{Alberti Nicolas}{Soldà Matteo}{Verifica per \textit{PB}}
+\addversione{2.0.0}{26/09/2023}{Soldà Matteo}{Alberti Nicolas}{Approvazione per candidatura \textit{PB}}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -1127,7 +1129,7 @@ N.B.: il gruppo ha preso atto che alcuni sprint potranno essere meno produttivi 
 		\hline
 		Alberti Nicolas   & 9                 & 4               & 11            & 6(+2)  & 13(+3)  & 6      \\
 		\hline
-		Brotto Romina     & 4(+1)            & 10              & 16(+2)        & 0      & 5       & 14(+2) \\
+		Brotto Romina     & 4(+1)             & 10              & 16(+2)        & 0      & 5       & 14(+2) \\
 		\hline
 		Cavaliere Erica   & 4                 & 12(+1)          & 12            & 9(+2)  & 11(+1)  & 11     \\
 		\hline
@@ -1176,15 +1178,15 @@ N.B.: il gruppo ha preso atto che alcuni sprint potranno essere meno produttivi 
 		\hline
 		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
 		\hline
-		Responsabile    & 30                            & 49(+12)       & 360                      \\
+		Responsabile    & 30                            & 49(+12)      & 360                     \\
 		\hline
 		Amministratore  & 20                            & 42(+3)       & 60                      \\
 		\hline
-		Analista        & 25                            & 90(+10)       & 250                     \\
+		Analista        & 25                            & 90(+10)      & 250                     \\
 		\hline
-		Progettista     & 25                            & 86(+50)       & 1250                     \\
+		Progettista     & 25                            & 86(+50)      & 1250                    \\
 		\hline
-		Programmatore   & 15                            & 86(+20)      & 300                    \\
+		Programmatore   & 15                            & 86(+20)      & 300                     \\
 		\hline
 		Verificatore    & 15                            & 70(+5)       & 75                      \\
 		\hline
@@ -1198,26 +1200,26 @@ N.B.: il gruppo ha preso atto che alcuni sprint potranno essere meno produttivi 
 \begin{center}
 	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
 		\hline
-		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                            \\
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                              \\
 		\hline
 		\hline
 		\textbf{Membro}   & \textbf{Resp.}    & \textbf{Amm.}   & \textbf{Ana.} &
-		\textbf{Proget.}  & \textbf{Program.} & \textbf{Verif.}                                             \\
+		\textbf{Proget.}  & \textbf{Program.} & \textbf{Verif.}                                               \\
 		\hline
-		Alberti Nicolas   & 9                 & 4               & 11            & 16(+10)  		& 18(+5) 	 & 8(+2)      \\
+		Alberti Nicolas   & 9                 & 4               & 11            & 16(+10)  & 18(+5)  & 8(+2)  \\
 		\hline
-		Brotto Romina     & 8(+4)                & 10              & 17(+1)        & 20(+20)      & 5       & 14 \\
+		Brotto Romina     & 8(+4)             & 10              & 17(+1)        & 20(+20)  & 5       & 14     \\
 		\hline
-		Cavaliere Erica   & 8(+4)                & 12             & 15(+3)         & 9 		 & 16(+5) 	 & 11     \\
+		Cavaliere Erica   & 8(+4)             & 12              & 15(+3)        & 9        & 16(+5)  & 11     \\
 		\hline
-		Ceccato Francesco & 2                & 5(+3)            & 17            & 13 (+5) 		& 16(+10)  	& 11     \\
+		Ceccato Francesco & 2                 & 5(+3)           & 17            & 13 (+5)  & 16(+10) & 11     \\
 		\hline
-		Salami Lorenzo    & 8(+4)                & 6               & 14(+3)      & 14 (+5)		 & 10      & 12 \\
+		Salami Lorenzo    & 8(+4)             & 6               & 14(+3)        & 14 (+5)  & 10      & 12     \\
 		\hline
-		Soldà Matteo      & 14                & 3           & 13(+3)            & 17 (+10)    	 & 20 	& 12(+3)  \\
+		Soldà Matteo      & 14                & 3               & 13(+3)        & 17 (+10) & 20      & 12(+3) \\
 		\hline
 		\hline
-		\textbf{Totale}   & 49(+12)            & 42(+3)          & 90(+10)        & 86(+50)  & 86(+20) & 70(+5) \\
+		\textbf{Totale}   & 49(+12)           & 42(+3)          & 90(+10)       & 86(+50)  & 86(+20) & 70(+5) \\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
@@ -1232,7 +1234,7 @@ N.B.: il gruppo ha preso atto che alcuni sprint potranno essere meno produttivi 
 \textbf{Suddivisione del lavoro:}
 \begin{itemize}
 	\item Romina si occupa di aggiornare le Norme di Progetto
-	\item Lorenzo ultimera` il Piano di Qualifica 
+	\item Lorenzo ultimera` il Piano di Qualifica
 	\item Nicolas si occupera` di stendere una versione di base della Specifica Architetturale e della Specifica Tecnica
 	\item Matteo si occupera` di implementare la modifica della luminosita` temporizzata per le aree illuminate
 	\item Erica e Francesco procederanno con gli unit test
@@ -1252,20 +1254,20 @@ N.B.: il gruppo ha preso atto che alcuni sprint potranno essere meno produttivi 
 		\hline
 		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
 		\hline
-		Responsabile    & 30                            & 61(+12)       & 360                      \\
+		Responsabile    & 30                            & 61(+12)      & 360                     \\
 		\hline
 		Amministratore  & 20                            & 45(+3)       & 60                      \\
 		\hline
-		Analista        & 25                            & 100(+10)       & 250                     \\
+		Analista        & 25                            & 100(+10)     & 250                     \\
 		\hline
-		Progettista     & 25                            & 131(+45)       & 1125                     \\
+		Progettista     & 25                            & 131(+45)     & 1125                    \\
 		\hline
-		Programmatore   & 15                            & 106(+20)      & 300                    \\
+		Programmatore   & 15                            & 106(+20)     & 300                     \\
 		\hline
-		Verificatore    & 15                            & 80(+10)       & 150                      \\
+		Verificatore    & 15                            & 80(+10)      & 150                     \\
 		\hline
 		\hline
-		\textbf{Totale} &                               & 523          & 11295                    \\
+		\textbf{Totale} &                               & 523          & 11295                   \\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
@@ -1274,26 +1276,26 @@ N.B.: il gruppo ha preso atto che alcuni sprint potranno essere meno produttivi 
 \begin{center}
 	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
 		\hline
-		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                            \\
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                                \\
 		\hline
 		\hline
 		\textbf{Membro}   & \textbf{Resp.}    & \textbf{Amm.}   & \textbf{Ana.} &
-		\textbf{Proget.}  & \textbf{Program.} & \textbf{Verif.}                                             \\
+		\textbf{Proget.}  & \textbf{Program.} & \textbf{Verif.}                                                 \\
 		\hline
-		Alberti Nicolas   & 9                 & 4               & 15(+4)            & 23(+7)  		& 18 		 & 12(+4)      \\
+		Alberti Nicolas   & 9                 & 4               & 15(+4)        & 23(+7)   & 18       & 12(+4)  \\
 		\hline
-		Brotto Romina     & 8                & 10              & 17       		& 23(+3)    	 & 15(+10)       & 14 \\
+		Brotto Romina     & 8                 & 10              & 17            & 23(+3)   & 15(+10)  & 14      \\
 		\hline
-		Cavaliere Erica   & 10(+2)                & 12             & 17(+2)        & 21(+12) 		 & 19(+3)	 	 & 14(+3)     \\
+		Cavaliere Erica   & 10(+2)            & 12              & 17(+2)        & 21(+12)  & 19(+3)   & 14(+3)  \\
 		\hline
-		Ceccato Francesco & 10(+8)                & 5            & 17            & 22(+9) 		& 18(+2) 			& 14(+3)     \\
+		Ceccato Francesco & 10(+8)            & 5               & 17            & 22(+9)   & 18(+2)   & 14(+3)  \\
 		\hline
-		Salami Lorenzo    & 10(+2)                & 6               & 16(+2)      & 23(+9) 		 & 15(+5)    	  & 12 \\
+		Salami Lorenzo    & 10(+2)            & 6               & 16(+2)        & 23(+9)   & 15(+5)   & 12      \\
 		\hline
-		Soldà Matteo      & 14                & 6(+3)           & 15(+2)           & 22(+5)    	 & 20 		& 12  \\
+		Soldà Matteo      & 14                & 6(+3)           & 15(+2)        & 22(+5)   & 20       & 12      \\
 		\hline
 		\hline
-		\textbf{Totale}   & 61(+12)            & 45(+3)          & 100(+10)        & 131(+45)  & 106(+20) & 80(+10) \\
+		\textbf{Totale}   & 61(+12)           & 45(+3)          & 100(+10)      & 131(+45) & 106(+20) & 80(+10) \\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
@@ -1311,7 +1313,7 @@ N.B.: il gruppo ha preso atto che alcuni sprint potranno essere meno produttivi 
 	\item Lorenzo proseguirà con gli unit test
 	\item Matteo procederà con il Manuale Utente
 	\item Erica procederà con la Specifica Architetturale e la Specifica Tecnica
-	\item Nicolas inserirà una pagina per l’admin di gestione dei ruoli 
+	\item Nicolas inserirà una pagina per l’admin di gestione dei ruoli
 	\item Francesco si occuperà di aggiungere eventuali componenti grafiche di alert per i guasti
 \end{itemize}
 \textbf{Difficoltà incontrate:}
@@ -1328,20 +1330,20 @@ N.B.: il gruppo ha preso atto che alcuni sprint potranno essere meno produttivi 
 		\hline
 		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
 		\hline
-		Responsabile    & 30                            & 71(+10)       & 300                      \\
+		Responsabile    & 30                            & 71(+10)      & 300                     \\
 		\hline
 		Amministratore  & 20                            & 48(+3)       & 60                      \\
 		\hline
-		Analista        & 25                            & 100       	& 0                     \\
+		Analista        & 25                            & 100          & 0                       \\
 		\hline
-		Progettista     & 25                            & 131       & 0                     \\
+		Progettista     & 25                            & 131          & 0                       \\
 		\hline
-		Programmatore   & 15                            & 127(+21)      & 315                    \\
+		Programmatore   & 15                            & 127(+21)     & 315                     \\
 		\hline
-		Verificatore    & 15                            & 90(+10)       & 150                      \\
+		Verificatore    & 15                            & 90(+10)      & 150                     \\
 		\hline
 		\hline
-		\textbf{Totale} &                               & 567          & 12120                    \\
+		\textbf{Totale} &                               & 567          & 12120                   \\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
@@ -1350,26 +1352,26 @@ N.B.: il gruppo ha preso atto che alcuni sprint potranno essere meno produttivi 
 \begin{center}
 	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
 		\hline
-		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                            \\
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                               \\
 		\hline
 		\hline
 		\textbf{Membro}   & \textbf{Resp.}    & \textbf{Amm.}   & \textbf{Ana.} &
-		\textbf{Proget.}  & \textbf{Program.} & \textbf{Verif.}                                             \\
+		\textbf{Proget.}  & \textbf{Program.} & \textbf{Verif.}                                                \\
 		\hline
-		Alberti Nicolas   & 9(+3)                 & 7(+3)               & 15            & 23  		 & 22(+4) 		 	& 14(+2)      \\
+		Alberti Nicolas   & 9(+3)             & 7(+3)           & 15            & 23      & 22(+4)   & 14(+2)  \\
 		\hline
-		Brotto Romina     & 11(+3)                & 10              	& 17       		& 23    	 & 21(+6)       	& 15(+1) 	\\
+		Brotto Romina     & 11(+3)            & 10              & 17            & 23      & 21(+6)   & 15(+1)  \\
 		\hline
-		Cavaliere Erica   & 10(+2)                & 12             		& 17        	& 21 		 & 22(+3)	 	 	& 15(+1)     \\
+		Cavaliere Erica   & 10(+2)            & 12              & 17            & 21      & 22(+3)   & 15(+1)  \\
 		\hline
-		Ceccato Francesco & 10(+2)             	  & 5            		& 17            & 22 		 & 22(+4) 			& 16(+2)     \\
+		Ceccato Francesco & 10(+2)            & 5               & 17            & 22      & 22(+4)   & 16(+2)  \\
 		\hline
-		Salami Lorenzo    & 10	                & 6              		& 16     		& 23 		 & 21(+2)    	 	& 14(+2)	\\
+		Salami Lorenzo    & 10                & 6               & 16            & 23      & 21(+2)   & 14(+2)  \\
 		\hline
-		Soldà Matteo      & 14                    & 6          			& 15            & 22    	 & 22(+2) 			& 14(+2)  	\\
+		Soldà Matteo      & 14                & 6               & 15            & 22      & 22(+2)   & 14(+2)  \\
 		\hline
 		\hline
-		\textbf{Totale}   & 73(+10)            & 48(+3)          & 100(+0)        & 131(+0)		 & 131(+21) & 90(+10) \\
+		\textbf{Totale}   & 73(+10)           & 48(+3)          & 100(+0)       & 131(+0) & 131(+21) & 90(+10) \\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
