--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -27,6 +27,8 @@ Questo documento serve a definire le metriche e i criteri di accettazione dei pr
 \addversione{1.0.1}{19/09/2023}{Brotto Romina}{Salami Lorenzo}{Aggiunta sezione di test client}
 \addversione{1.0.2}{25/09/2023}{Brotto Romina}{Soldà Matteo}{Aggiunti test server}
 \addversione{1.0.3}{26/09/2023}{Brotto Romina}{Soldà Matteo}{Aggiunta sezione code coverage}
+\addversione{1.1.0}{26/09/2023}{Alberti Nicolas}{Soldà Matteo}{Verifica per \textit{PB}}
+\addversione{2.0.0}{26/09/2023}{Soldà Matteo}{Alberti Nicolas}{Approvazione per candidatura \textit{PB}}
 
 
 \begin{document}
