--- a/docs/esterni/specifica_tecnica/specifica_tecnica.tex
+++ b/docs/esterni/specifica_tecnica/specifica_tecnica.tex
@@ -23,6 +23,8 @@ Questo documento descrive la specifica architetturale del progetto, illustrando 
 \addversione{0.0.1}{20/09/2023}{Soldà Matteo}{Alberti Nicolas}{Stesura delle prime sezioni.}
 \addversione{0.0.2}{21/09/2023}{Soldà Matteo}{Alberti Nicolas}{Stesura delle parti mancanti esclusi dati relativi ai test}
 \addversione{0.0.3}{22/09/2023}{Soldà Matteo}{Alberti Nicolas}{Stesura dei dati relativi ai test}
+\addversione{0.1.0}{26/09/2023}{Alberti Nicolas}{Soldà Matteo}{Verifica per \textit{PB}}
+\addversione{1.0.0}{26/09/2023}{Soldà Matteo}{Alberti Nicolas}{Approvazione per candidatura \textit{PB}}
 
 \begin{document}
 \makeindexdetails
