--- a/docs/esterni/manuale_amministratore/manuale_amministratore.tex
+++ b/docs/esterni/manuale_amministratore/manuale_amministratore.tex
@@ -21,6 +21,9 @@ Questo documento descrive le funzionalità del programma a coloro che dovessero 
 \addversione{0.0.0}{05/09/2023}{Soldà Matteo}{Cavaliere Erica}{Stesura scheletro}
 \addversione{0.0.1}{07/09/2023}{Soldà Matteo}{Cavaliere Erica}{Stesura prima bozza contenuto}
 \addversione{0.0.2}{13/09/2023}{Soldà Matteo}{Cavaliere Erica}{Aggiunta delle immagini}
+\addversione{0.1.0}{26/09/2023}{Alberti Nicolas}{Soldà Matteo}{Verifica per
+\textit{PB}}
+\addversione{1.0.0}{26/09/2023}{Soldà Matteo}{Alberti Nicolas}{Approvazione per candidatura \textit{PB}}
 \begin{document}
 \makeindexdetails
 \makefrontpage \makeversioni
@@ -58,18 +61,18 @@ In questo documento descriveremo l'utilizzo dell'utente con privilegi di amminis
 Il login è la prima cosa che viene richiesta qualora si raggiungesse l'indirizzo dell'applicazione. In questa schermata andrà inserito lo username e la password del proprio utente. Qualora i dati inseriti siano corretti, si verrà renderizzati automaticamente alla dashboard, altrimenti verrà riproposta la pagina di login con un errore. La durata della sessione dopo un login effettuato con successo è di un'ora.
 % Immagine della schermata di login
 \begin{figure}[H]
-\centering
-\includegraphics[width=\textwidth]{login}
-\caption{Pagina di login}
+    \centering
+    \includegraphics[width=\textwidth]{login}
+    \caption{Pagina di login}
 \end{figure}
 
 \subsection{Logout}
 La funzionalità di logout permette di terminare la sessione generata da un precedente login non ancora scaduto. Il pulsante per il logout è posizionato nella dashboard nell'angolo in alto a destra.
 % Immagine del pulsante di logout
 \begin{figure}[H]
-\centering
-\includegraphics[width=\textwidth]{EsempioBreadcrumbConEsci}
-\caption{Esempio di barra di breadcrumb con pulsante di logout, modifica utente e creazione utente.}
+    \centering
+    \includegraphics[width=\textwidth]{EsempioBreadcrumbConEsci}
+    \caption{Esempio di barra di breadcrumb con pulsante di logout, modifica utente e creazione utente.}
 \end{figure}
 
 \subsection{Creazione Utente}
@@ -108,30 +111,30 @@ Le aree illuminate sono la componente di base dell'applicazione. Esse al loro in
 \subsection{Lista Aree Illuminate}
 Entrando nella dashboard dopo il login, verrà presentata la lista delle aree illuminate che sono state inserite a sistema. Ogni area presenta come informazione il proprio ID (generato automaticamente), il nome assegnato, la descrizione, la latitudine e la longitudine. Al fianco di queste informazioni sono presentati tre pulsanti: informazioni, modifica ed elimina. \\
 \begin{figure}[H]
-\centering
-\includegraphics[width=\textwidth]{ListaAree}
-\caption{Esempio di lista delle aree}
+    \centering
+    \includegraphics[width=\textwidth]{ListaAree}
+    \caption{Esempio di lista delle aree}
 \end{figure}
 Il pulsante \textit{informazioni} permette di caricare tutte le informazioni dell'area illuminata, permettendo inoltre di visualizzare i lampioni e i sensori ad essa collegati.\\
 \begin{figure}[H]
-\centering
-\includegraphics[width=0.5\textwidth]{InfoArea}
-\caption{Esempio di informazioni di una singola area}
+    \centering
+    \includegraphics[width=0.5\textwidth]{InfoArea}
+    \caption{Esempio di informazioni di una singola area}
 \end{figure}
 Il pulsante \textit{modifica} permette di aprire una schermata dalla quale modificare i dati dell'area. La formattazione è analoga a quella dell'aggiunta dell'area.\\
 Il pulsante \textit{elimina} permette di eliminare l'area. L'azione non avviene subito dopo la pressione del pulsante, ma richiede una seconda conferma tramite modale. \\
 \begin{figure}[H]
-\centering
-\includegraphics[width=\textwidth]{ModaleEliminazioneArea}
-\caption{Richiesta di conferma per l'eliminazione di un'area illuminata e di tutti i lampioni e sensori ad essa associati}
+    \centering
+    \includegraphics[width=\textwidth]{ModaleEliminazioneArea}
+    \caption{Richiesta di conferma per l'eliminazione di un'area illuminata e di tutti i lampioni e sensori ad essa associati}
 \end{figure}
 
 Al di sopra della lista delle aree è presente un pulsante che permette di inerire una nuova area, funzionalità che verrà descritta nella prossima sottosezione
 % Immagine della lista aree (belle popolate ovviamente)
 \begin{figure}[H]
-\centering
-\includegraphics[width=\textwidth]{FormAggiuntaArea}
-\caption{Form richiedente le informazioni dell'area da aggiungere a sistema}
+    \centering
+    \includegraphics[width=\textwidth]{FormAggiuntaArea}
+    \caption{Form richiedente le informazioni dell'area da aggiungere a sistema}
 \end{figure}
 % Manca la descrizione del selettore che permette di modificare la luminosità di tutti i lampioni dell'area
 
@@ -160,28 +163,28 @@ Inoltre, si può decidere se un lampione è recettivo rispetto ai segnali oppure
 Aprendo le informazioni di una singola area, al di sotto delle informazioni della stessa si troverà la lista dei lampioni collegati all'area selezionata.\\
 Per ogni lampione, sono mostrate nella lista: l'ID (generato automaticamente), lo stato, l'intensità luminosa attuale e il nome del lampione. Al fianco di queste informazioni sono presentati quattro pulsanti: informazioni, modifica, elimina e segnala guasto. \\
 \begin{figure}[H]
-\centering
-\includegraphics[width=\textwidth]{ListaLampioni}
-\caption{Esempio di lista dei lampioni}
+    \centering
+    \includegraphics[width=\textwidth]{ListaLampioni}
+    \caption{Esempio di lista dei lampioni}
 \end{figure}
 Il pulsante \textit{informazioni} permette di caricare tutte le informazioni del lampione.\\
 \begin{figure}[H]
-\centering
-\includegraphics[width=0.5\textwidth]{InfoLampione}
-\caption{Esempio di informazioni di un singolo lampione}
+    \centering
+    \includegraphics[width=0.5\textwidth]{InfoLampione}
+    \caption{Esempio di informazioni di un singolo lampione}
 \end{figure}
 Il pulsante \textit{modifica} permette di aprire una schermata dalla quale modificare i dati del lampione.\\
 Il pulsante \textit{elimina} permette di eliminare il lampione. L'azione non avviene subito dopo la pressione del pulsante, ma richiede una seconda conferma tramite modale. \\
 \begin{figure}[H]
-\centering
-\includegraphics[width=\textwidth]{ModaleEliminazioneLampione}
-\caption{Richiesta di conferma per l'eliminazione di un lampione }
+    \centering
+    \includegraphics[width=\textwidth]{ModaleEliminazioneLampione}
+    \caption{Richiesta di conferma per l'eliminazione di un lampione }
 \end{figure}
 Il pulsante \textit{segnala guasto} permette di segnalare manualmente un guasto rilevato nel lampione, inserendolo di conseguenza nella lista guasti (questa funzionalità attualmente è esclusiva dell'amministratore).\\
 \begin{figure}[H]
-\centering
-\includegraphics[width=\textwidth]{ListaLampioniConGuasti}
-\caption{I lampioni già segnalati come guasti presenteranno al posto del pulsante, una X rossa con un tooltip che indica che l'azione è già stata effettuata}
+    \centering
+    \includegraphics[width=\textwidth]{ListaLampioniConGuasti}
+    \caption{I lampioni già segnalati come guasti presenteranno al posto del pulsante, una X rossa con un tooltip che indica che l'azione è già stata effettuata}
 \end{figure}
 
 \subsection{Inserimento, Modifica e Rimozione di un Lampione}
@@ -197,9 +200,9 @@ A lato delle informazioni riportate nella tabella dei lampioni, c'è un pulsante
 \subsubsection{Seganalzione Guasto e Lista Guasti}
 A lato delle informazioni riportate nella tabella dei lampioni, c'è un pulsante nero con la scritta bianca. Il pulsante serve per segnalare manualmente un lampione guasto, che verrà quindi inserito nella lista guasti (visualizzabile solo dall'utente manutentore).
 \begin{figure}[H]
-\centering
-\includegraphics[width=\textwidth]{ModaleGuastoLampione}
-\caption{Richiesta di conferma l'aggiunta di un lampione alla lista dei guastii}
+    \centering
+    \includegraphics[width=\textwidth]{ModaleGuastoLampione}
+    \caption{Richiesta di conferma l'aggiunta di un lampione alla lista dei guastii}
 \end{figure}
 
 \newpage
@@ -208,24 +211,24 @@ A lato delle informazioni riportate nella tabella dei lampioni, c'è un pulsante
 Il sensore è la componente dell'area che ha lo scopo di rilevare e di conseguenza segnalare i movimenti di cose, persone e animali nel suo raggio d'azione. Tra i suoi elementi, ne spicca uno in particolare: la durata della segnalazione. Questo parametro serve a indicare per quanto tempo i lampioni impostati in modalità manuale possano visualizzare la segnalazione come valida durare la verifica ciclica.
 \subsection{Lista Sensori per Area}
 \begin{figure}[H]
-\centering
-\includegraphics[width=\textwidth]{ListaSensori}
-\caption{Esempio di lista dei sensori}
+    \centering
+    \includegraphics[width=\textwidth]{ListaSensori}
+    \caption{Esempio di lista dei sensori}
 \end{figure}
 Aprendo le informazioni di una singola area, al di sotto delle informazioni dei lampioni si troverà la lista dei sensori collegati all'area selezionata.\\
 Per ogni sensore, sono mostrate nella lista: l'ID (generato automaticamente), l'indirizzo IP e il nome del sensore. Al fianco di queste informazioni sono presentati tre pulsanti: informazioni, modifica ed elimina. \\
 Il pulsante \textit{informazioni} permette di caricare tutte le informazioni del sensore.\\
 \begin{figure}[H]
-\centering
-\includegraphics[width=0.5\textwidth]{InfoSensore}
-\caption{Esempio di informazioni di un singolo sensore}
+    \centering
+    \includegraphics[width=0.5\textwidth]{InfoSensore}
+    \caption{Esempio di informazioni di un singolo sensore}
 \end{figure}
 Il pulsante \textit{modifica} permette di aprire una schermata dalla quale modificare i dati del sensore.\\
 Il pulsante \textit{elimina} permette di eliminare il sensore. L'azione non avviene subito dopo la pressione del pulsante, ma richiede una seconda conferma tramite modale. \\
 \begin{figure}[H]
-\centering
-\includegraphics[width=\textwidth]{ModaleEliminazioneSensore}
-\caption{Richiesta di conferma per l'eliminazione di un sensore }
+    \centering
+    \includegraphics[width=\textwidth]{ModaleEliminazioneSensore}
+    \caption{Richiesta di conferma per l'eliminazione di un sensore }
 \end{figure}
 
 \subsection{Inserimento, Modifica e Rimozione di un Sensore}
