hotfix manuale utente + primi link

--- a/docs/esterni/presentazionePB/lettera_presentazione_PB.tex
+++ b/docs/esterni/presentazionePB/lettera_presentazione_PB.tex
@@ -30,17 +30,19 @@ Prima di procedere con la presentazione dei documenti, il gruppo desidera inform
 Accedendo a questo \href{https://github.com/4ourSquared/LumosMinima/tree/main/public}{link} (che effettuerà un \textit{redirect} su \href{https://github.com/}{GitHub}), saranno visionabili i seguenti nuovi documenti:
 \paragraph{Documenti Esterni}
 \begin{itemize}
-    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/analisi_dei_requisiti_v1.0.0.pdf}{Analisi dei Requisiti} v2.0.0 (Aggiornato)
-    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/piano_di_progetto_v1.0.0.pdf}{Piano di Progetto} v1.0.0 (Aggiornato)
-    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/piano_di_qualifica_v1.0.0.pdf}{Piano di Qualifica} v1.0.0 (Aggiornato)
-    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/motivazione_scelte_v1.0.0.pdf}{Motivazione delle Scelte} v1.0.0
-    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/glossario_v1.0.0.pdf}{Glossario} v2.0.0 (Aggiornato)
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/analisi_dei_requisiti_v2.0.0.pdf}{Analisi dei Requisiti} v2.0.0 (Aggiornato)
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/piano_di_progetto_v2.0.0.pdf}{Piano di Progetto} v2.0.0 (Aggiornato)
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/piano_di_qualifica_v2.0.0.pdf}{Piano di Qualifica} v2.0.0 (Aggiornato)
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/glossario_v2.0.0.pdf}{Glossario} v2.0.0 (Aggiornato)
     \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/specifica_tecnica_v1.0.0.pdf}{Specifica Tecnica} v1.0.0
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/manuale_amministratore_v1.0.0.pdf}{Manuale Amministratore} v1.0.0
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/manuale_manutentore_v1.0.0.pdf}{Manuale Manutentore} v1.0.0
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/manuale_utente_v1.0.0.pdf}{Manuale Utente} v1.0.0
     %aggiungere verbali esterni
 \end{itemize}
 \paragraph{Documenti Interni}
 \begin{itemize}
-    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/interni/norme_di_progetto_v1.0.0.pdf}{Norme di Progetto} v2.0.0 (Aggiornato)
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/interni/norme_di_progetto_v2.0.0.pdf}{Norme di Progetto} v2.0.0 (Aggiornato)
     \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/interni/verbali}{XX Verbali Interni}
 \end{itemize}
 
