fine stesura lettera presentazione

--- a/docs/esterni/presentazionePB/lettera_presentazione_PB.tex
+++ b/docs/esterni/presentazionePB/lettera_presentazione_PB.tex
@@ -38,15 +38,25 @@ Accedendo a questo \href{https://github.com/4ourSquared/LumosMinima/tree/main/pu
     \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/manuale_amministratore_v1.0.0.pdf}{Manuale Amministratore} v1.0.0
     \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/manuale_manutentore_v1.0.0.pdf}{Manuale Manutentore} v1.0.0
     \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/manuale_utente_v1.0.0.pdf}{Manuale Utente} v1.0.0
-    %aggiungere verbali esterni
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/verbali/2023_08_16_E.pdf}{Verbale del 16/08 con Imola Informatica}
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/verbali/2023_08_23_E.pdf}{Verbale del 23/08 con Imola Informatica}
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/verbali/2023_09/07_E.pdf}{Verbale del 07/09 con Imola Informatica}
 \end{itemize}
 \paragraph{Documenti Interni}
 \begin{itemize}
     \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/interni/norme_di_progetto_v2.0.0.pdf}{Norme di Progetto} v2.0.0 (Aggiornato)
-    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/interni/verbali}{XX Verbali Interni}
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/interni/verbali}{6 Verbali Interni}(A partire dal 14/08/2023, data della revisione RTB)
 \end{itemize}
 
-%% DA AGGIUNGERE L'ANDAMENTO CON PREVENTIVO E COSTI SOSTENUTI, SIA ORARI CHE ECONOMICI
+Per quanto riguarda l'aderenza al preventivo iniziale, ci teniamo a segnalare di aver riscontrato le seguenti differenze:
+\begin{itemize}
+    \item è stata utilizzata un'ora in più nella persona del responsabile, comportando di conseguenza un aumento per €30 rispetto al preventivo iniziale;
+    \item è stata utilizzata un'ora in più nella persona del progettista, comportando di conseguenza un aumento per €25 rispetto al preventivo iniziale;
+    \item sono state risparmiate 2 ore nella persona dell'amministratore, comportando di conseguenza un risparmio di €40 rispetto al preventivo iniziale;
+    \item sono state risparmiate 3 ore nella persona del programmatore, comportando di conseguenza un risparmio di €45 rispetto al preventivo iniziale.
+\end{itemize}
+
+Alla luce di quanto affermato, il team di 4ourSquared ha rispettato il preventivo orario ed economico iniziale, considerando che le ore utilizzate per lo sviluppo sono state calcolate per un totale di 567 rispetto alle 570 previste, comportando una spesa economica per €12.120 rispetto ai €12.150 previsti.\\\\
 
 Come precedentemente riferito in fase di candidatura, tutti i documenti pubblici sono collocati nella cartella \textit{public}, dalla quale chiediamo cortesemente di non uscire.
 
